--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,13 @@
 .Trashes
 .virtualenv
 *.class
-*.egg
 *.egg-info
 *.pyc
 *.sublime-*
+/build
+/dist
 /MANIFEST
+coverage.lcov
 dist
 docs
 Icon
