feat: adds library documentation

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,9 @@
 * text=auto
 
+# Cassettes
 tests/cassettes/* -diff
 tests/cassettes/* linguist-generated
+
+# Docs
+docs/**/* -diff
+docs/**/* linguist-generated
