--- a/tests/cassettes/test_child_user_api_keys.yaml
+++ b/tests/cassettes/test_child_user_api_keys.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: null
+    body: '{"user": {"name": "Test User"}}'
     headers:
       Accept:
       - '*/*'
@@ -8,135 +8,31 @@ interactions:
       - gzip, deflate
       Connection:
       - keep-alive
+      Content-Length:
+      - '31'
+      Content-Type:
+      - application/json
       authorization:
       - <REDACTED>
       user-agent:
       - <REDACTED>
-    method: GET
+    method: POST
     uri: https://api.easypost.com/v2/users
   response:
     body:
-      string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
-        null, "name": "EasyPost Python Client Library Tests", "phone_number": "<REDACTED>",
-        "verified": true, "created_at": "2017-03-01T03:01:34Z", "default_carbon_offset":
-        false, "balance": "0.00000", "price_per_shipment": "0.00000", "recharge_amount":
-        "100.00", "secondary_recharge_amount": "100.00", "recharge_threshold": "0.00",
-        "has_billing_method": false, "cc_fee_rate": "0.03", "default_insurance_amount":
-        null, "insurance_fee_rate": "0.01", "insurance_fee_minimum": "1.00", "email":
-        "<REDACTED>", "children": [{"id": "user_9bc25a1d07f54682997435937b30d4f0",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Python All-Things-Tested", "phone_number": "8005550100", "verified": true,
-        "created_at": "2020-05-11T21:59:07Z", "default_carbon_offset": false, "children":
-        []}, {"id": "user_36a3958cd65a4592b1ddb742f7d3362a", "object": "User", "parent_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Python All-Things-Tested",
-        "phone_number": "8005550100", "verified": true, "created_at": "2020-05-14T03:55:52Z",
-        "default_carbon_offset": false, "children": []}, {"id": "user_f55178b032c44c7e8c2611fa84415d94",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Python All-Things-Tested", "phone_number": "8005550100", "verified": true,
-        "created_at": "2020-05-14T04:03:23Z", "default_carbon_offset": false, "children":
-        []}, {"id": "user_e1f80a2e05f84319960c63701a30e7e0", "object": "User", "parent_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Python All-Things-Tested",
-        "phone_number": "8005550100", "verified": true, "created_at": "2020-07-22T11:19:45Z",
-        "default_carbon_offset": false, "children": []}, {"id": "user_6e4ee9596b174c1cad3480d47f5027ef",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Python All-Things-Tested", "phone_number": "8005550100", "verified": true,
-        "created_at": "2020-07-27T00:28:49Z", "default_carbon_offset": false, "children":
-        []}, {"id": "user_f0f42ddbb05c400492ec6bb8fb699ff7", "object": "User", "parent_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Python All-Things-Tested",
-        "phone_number": "8005550100", "verified": true, "created_at": "2022-03-04T21:47:02Z",
-        "default_carbon_offset": false, "children": []}, {"id": "user_c25107511f01413eb978b160bcf544f3",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Python All-Things-Testing", "phone_number": "8005550100", "verified": true,
-        "created_at": "2022-03-09T03:09:38Z", "default_carbon_offset": false, "children":
-        []}, {"id": "user_15beb95593da4218991d0dde8d91c519", "object": "User", "parent_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Python All-Things-Testing",
-        "phone_number": "8005550100", "verified": true, "created_at": "2022-03-09T03:14:26Z",
-        "default_carbon_offset": false, "children": []}, {"id": "user_2eb666a605dd487e92e392972fdcdd4e",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Python All-Things-Tested", "phone_number": "8005550100", "verified": true,
-        "created_at": "2022-03-09T04:49:12Z", "default_carbon_offset": false, "children":
-        []}, {"id": "user_60c5106702db498b81feef3c8fc06086", "object": "User", "parent_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Python All-Things-Tested",
-        "phone_number": "8005550100", "verified": true, "created_at": "2022-03-09T17:14:37Z",
-        "default_carbon_offset": false, "children": []}, {"id": "user_271679a319e047628b22b015e7395845",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Python All-Things-Tested", "phone_number": "8005550100", "verified": true,
-        "created_at": "2022-03-09T18:48:09Z", "default_carbon_offset": false, "children":
-        []}, {"id": "user_10d3414e82ef40e9b1d4cc683fb2f1fa", "object": "User", "parent_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Python All-Things-Tested",
-        "phone_number": "8005550100", "verified": true, "created_at": "2022-03-09T19:30:32Z",
-        "default_carbon_offset": false, "children": []}, {"id": "user_910c3ccbc07a44c49015011c298c6ad3",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Python All-Things-Tested", "phone_number": "8005550100", "verified": true,
-        "created_at": "2022-03-09T23:05:15Z", "default_carbon_offset": false, "children":
-        []}, {"id": "user_dd98700490a04734aa56843be76fc786", "object": "User", "parent_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Python All-Things-Tested",
-        "phone_number": "8005550100", "verified": true, "created_at": "2022-03-10T02:43:39Z",
-        "default_carbon_offset": false, "children": []}, {"id": "user_d344d010c21245b1a18b714e0962cf7f",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Python All-Things-Tested", "phone_number": "8005550100", "verified": true,
-        "created_at": "2022-03-10T19:36:43Z", "default_carbon_offset": false, "children":
-        []}, {"id": "user_f5b66eda54a74ee9b7e4b672ebb37772", "object": "User", "parent_id":
-        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Python All-Things-Tested",
-        "phone_number": "8005550100", "verified": true, "created_at": "2022-03-15T20:51:54Z",
-        "default_carbon_offset": false, "children": []}, {"id": "user_7311dcd02d624bce98518eef5bd2fb53",
-        "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2", "name":
-        "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:03:19Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_1839561ce33a474a90bc63f3119784e1", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:06:11Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_0b02591456b24baf9e4b737f18dc2a7f", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:07:27Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_0ac706a93cc3415b9529372cd80e4afc", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:15:41Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_42aa228efe6e474b9ff1bcf71c3f3070", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:17:07Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_a340fabe196c4401ba02eda8e5b3580c", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:18:04Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_6b974ddbeecd4de4b5188a72c6d28648", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:18:38Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_bb6e9d304cc344d4bd1da71078316986", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:18:45Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_838ae6e339f241e5aa1a43b17a6aa10b", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:20:10Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_f125f07c1e8e44289936792718a01ada", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T18:20:18Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_5c88c739a6084747a9cb6f251b9a8143", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T19:48:16Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_97a6a229e70a42b889983c8002a49164", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T19:48:41Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_348f95f2069e41f7b2b0415da0d60c69", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T19:48:56Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_c9c4557ce7e44dd1b56a6cd9e2ede697", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T19:49:27Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_4f9028d635ec4124882569cdfa717046", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T19:49:51Z", "default_carbon_offset": false, "children": []}, {"id":
-        "user_9ae774c72a1b432ba6cf913da576115b", "object": "User", "parent_id": "user_54356a6b96c940d8913961a3c7b909f2",
-        "name": "Test User", "phone_number": "8005550100", "verified": true, "created_at":
-        "2022-05-10T20:09:12Z", "default_carbon_offset": false, "children": []}]}'
+      string: '{"id": "user_a5ed251b40ba42a58e5496cd2adceadc", "object": "User", "parent_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Test User", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-11-22T22:37:21Z", "default_carbon_offset":
+        false, "children": [], "api_keys": []}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '9071'
+      - '664'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"06f5c69ecae9cd78fad5192b9789d9de"
+      - W/"1044211ae9ed70246d3c3a656faf2c9a"
       expires:
       - '0'
       pragma:
@@ -154,18 +50,84 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 816b7d7d637d4f1ee78a8ee80069c2f3
+      - 816b7d7e637d4f20e78a8eea0069c477
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
+      - intlb2nuq 29913d444b
       - extlb1nuq 29913d444b
       x-runtime:
-      - '0.417644'
+      - '0.835970'
+      x-version-label:
+      - easypost-202211222057-6fd042c9a6-master
+      x-xss-protection:
+      - 1; mode=block
+    status:
+      code: 201
+      message: Created
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - keep-alive
+      authorization:
+      - <REDACTED>
+      user-agent:
+      - <REDACTED>
+    method: GET
+    uri: https://api.easypost.com/v2/users/user_a5ed251b40ba42a58e5496cd2adceadc
+  response:
+    body:
+      string: '{"id": "user_a5ed251b40ba42a58e5496cd2adceadc", "object": "User", "parent_id":
+        "user_54356a6b96c940d8913961a3c7b909f2", "name": "Test User", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-11-22T22:37:21Z", "default_carbon_offset":
+        false, "children": []}'
+    headers:
+      cache-control:
+      - private, no-cache, no-store
+      content-length:
+      - '257'
+      content-type:
+      - application/json; charset=utf-8
+      etag:
+      - W/"659c13f4502047728511e7a580775a4d"
+      expires:
+      - '0'
+      pragma:
+      - no-cache
+      referrer-policy:
+      - strict-origin-when-cross-origin
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains; preload
+      transfer-encoding:
+      - chunked
+      x-backend:
+      - easypost
+      x-content-type-options:
+      - nosniff
+      x-download-options:
+      - noopen
+      x-ep-request-uuid:
+      - 816b7d7e637d4f21e78a8eea0069c4fc
+      x-frame-options:
+      - SAMEORIGIN
+      x-node:
+      - bigweb8nuq
+      x-permitted-cross-domain-policies:
+      - none
+      x-proxied:
+      - intlb2nuq 29913d444b
+      - extlb1nuq 29913d444b
+      x-runtime:
+      - '0.040501'
       x-version-label:
       - easypost-202211222057-6fd042c9a6-master
       x-xss-protection:
@@ -340,16 +302,21 @@ interactions:
         "test", "created_at": "2022-05-10T20:09:12Z", "id": "ak_2af3b8b839154e65800fcc0db07dd9a0"},
         {"object": "ApiKey", "active": true, "key": "<REDACTED>", "mode": "production",
         "created_at": "2022-05-10T20:09:12Z", "id": "ak_dc479391964a43b8bf5e07838aa2b9d7"}],
-        "children": []}]}'
+        "children": []}, {"id": "user_a5ed251b40ba42a58e5496cd2adceadc", "keys": [{"object":
+        "ApiKey", "active": true, "key": "<REDACTED>", "mode": "test", "created_at":
+        "2022-11-22T22:37:21Z", "id": "ak_6b0c85c298bf4ab281579f56fa7af020"}, {"object":
+        "ApiKey", "active": true, "key": "<REDACTED>", "mode": "production", "created_at":
+        "2022-11-22T22:37:21Z", "id": "ak_8e54317dd0bf46c99f2eea19c8ec7419"}], "children":
+        []}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '15310'
+      - '15774'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"2b9399633f407caf870e23d3d332a48b"
+      - W/"e32dd6d932a52d9103f40866b003b901"
       expires:
       - '0'
       pragma:
@@ -367,18 +334,18 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 816b7d7d637d4f1ee78a8ee80069c336
+      - 816b7d7e637d4f22e78a8eea0069c539
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb11nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
+      - intlb2nuq 29913d444b
       - extlb1nuq 29913d444b
       x-runtime:
-      - '0.056524'
+      - '0.051660'
       x-version-label:
       - easypost-202211222057-6fd042c9a6-master
       x-xss-protection:
