--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: set up python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: "3.11"
       - name: Install Dependencies
@@ -20,14 +20,14 @@ jobs:
       - name: Check format
         run: make format-check
   run-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04 # TODO: Python 3.6 doesn't have a binary for 22.04, switch to `latest` once we drop support for Python 3.6
     strategy:
       matrix:
         pythonversion: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
       - name: set up python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.pythonversion }}
       - name: Install Dependencies
