fix: test amount

--- a/tests/cassettes/test_beta_referral_refund_by_amount.yaml
+++ b/tests/cassettes/test_beta_referral_refund_by_amount.yaml
@@ -1,6 +1,6 @@
 interactions:
 - request:
-    body: '{"refund_amount": "$20.00"}'
+    body: '{"refund_amount": "2000"}'
     headers:
       Accept:
       - '*/*'
@@ -9,7 +9,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '27'
+      - '25'
       Content-Type:
       - application/json
       authorization:
@@ -47,20 +47,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 52d122c5639a09fae78a024300089c77
+      - 3ad0bddf639b69bbe78859a700040543
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq 29913d444b
-      - extlb2nuq 29913d444b
+      - extlb1nuq 29913d444b
       x-runtime:
-      - '0.482411'
+      - '0.515727'
       x-version-label:
-      - easypost-202212132312-d72b368b58-master
+      - easypost-202212141856-b2c38022ed-master
       x-xss-protection:
       - 1; mode=block
     status:
