--- a/tests/cassettes/test_beta_get_lowest_stateless_rate.yaml
+++ b/tests/cassettes/test_beta_get_lowest_stateless_rate.yaml
@@ -32,6 +32,11 @@ interactions:
         "to_address": {"object": "Address", "name": "Elizabeth Swan", "street1": "179
         N Harbor Dr", "city": "Redondo Beach", "state": "CA", "zip": "90277", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>"}, "rates": [{"object":
+        "Rate", "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
+        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
+        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        null, "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"object":
         "Rate", "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate":
         "7.75", "currency": "USD", "retail_rate": "7.75", "retail_currency": "USD",
         "list_rate": "7.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
@@ -46,12 +51,7 @@ interactions:
         "currency": "USD", "retail_rate": "6.07", "retail_currency": "USD", "list_rate":
         "6.07", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         3, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        3, "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"object":
-        "Rate", "mode": "test", "service": "Express", "carrier": "USPS", "rate": "31.25",
-        "currency": "USD", "retail_rate": "35.80", "retail_currency": "USD", "list_rate":
-        "31.25", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}], "options":
+        3, "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}], "options":
         {"currency": "USD", "payment": {"type": "SENDER"}, "date_advance": 0}, "parcel":
         {"object": "Parcel", "length": 10.0, "width": 8.0, "height": 4.0, "weight":
         15.4}, "messages": [{"carrier": "DhlEcs", "carrier_account_id": "ca_c3cbbd21bc97400bbbaed6d030909476",
@@ -65,7 +65,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"5730ea5b8b4ede80bf42e209b8b4d9df"
+      - W/"3625cd1b5602ffe486a6855ff1125560"
       expires:
       - '0'
       pragma:
@@ -78,26 +78,23 @@ interactions:
       - chunked
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 974d0bc763d17e0be78859a4000435bb
+      - afb1143263d185b6e788ea6c00073ea7
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - intlb1wdc 29913d444b
-      - extlb3wdc 29913d444b
+      - intlb2nuq 29913d444b
+      - extlb1nuq 29913d444b
       x-runtime:
-      - '0.692670'
+      - '0.719252'
       x-version-label:
       - easypost-202301251848-057c9f927b-master
       x-xss-protection:
