fix: use build package for build process

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,25 @@
-.env
-.cache
-.DS_Store
-.AppleDouble
-.LSOverride
-Icon
 ._*
-.Spotlight-V100
-.Trashes
-
-# virtual environment
-venv
-
-/build
-/dist
-/MANIFEST
-/easypost.egg-info
-*.pyc
-*.egg
-.tox
-*.class
-
-*.sublime-*
-
-test
-virtualenv
-.virtualenv
-.idea
+.AppleDouble
+.cache
 .coverage
+.DS_Store
+.env
 .env-override
-/venv*
+.idea
+.LSOverride
+.Spotlight-V100
+.tox
+.Trashes
+.virtualenv
+*.class
+*.egg
+*.egg-info
+*.pyc
+*.sublime-*
+/MANIFEST
+dist
 docs/build/
+Icon
+test
+venv
+virtualenv
