--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: "CI"
+name: 'CI'
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: set up python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.11'
       - name: Install Dependencies
         run: make install
       - name: Check format
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-20.04 # TODO: Python 3.6 doesn't have a binary for 22.04, switch to `latest` once we drop support for Python 3.6
     strategy:
       matrix:
-        pythonversion: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
+        pythonversion: ['3.6', '3.7', '3.8', '3.9', '3.10', '3.11']
     steps:
       - uses: actions/checkout@v3
       - name: set up python
@@ -41,3 +41,22 @@ jobs:
         run: venv/bin/coveralls --service=github
       - name: Run security analysis
         run: make scan
+  docs:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install Dependencies
+        run: make install
+      - name: Generate Docs
+        run: make docs
+      - name: Deploy Docs
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs
