--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Check format
         run: make format-check
   run-tests:
-    runs-on: ubuntu-20.04 # TODO: Python 3.6 doesn't have a binary for 22.04, switch to `latest` once we drop support for Python 3.6
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        pythonversion: ['3.6', '3.7', '3.8', '3.9', '3.10', '3.11']
+        pythonversion: ['3.7', '3.8', '3.9', '3.10', '3.11']
     steps:
       - uses: actions/checkout@v3
       - name: set up python
